--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/final_project?serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/final_projectdb?serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=kolkol00
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
