--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/final_projectdb?serverTimezone
 spring.datasource.username=root
 spring.datasource.password=kolkol00
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.connection.characterEncoding=utf8
 spring.thymeleaf.prefix=/WEB-INF/templates/
